@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company {
  - designation
}

class SNSUser {
  - snsUserNumber
  - name
  - birthDate
  - sex
  - phoneNumber
  - email
  - citizenCardNumber
}

class VaccinationCenter {
  - name
  - address
  - email
  - phoneNumber
  - faxNumber
  - website
}

class VaccineType {
  - code
  - description
  - technology
}

class Appointment {
  - date
  - time
  - state
}

' Relações
Company "1" -- "*" VaccinationCenter : manages >
SNSUser "1" -- "*" Appointment : schedules >
Appointment "*" -- "1" VaccinationCenter : at >
Appointment "*" -- "1" VaccineType : for >

@enduml